@@ -3,6 +3,7 @@
 CPPUNIT_TEST_SUITE_REGISTRATION(ClinkTestCase);
 
 #include <cybergarage/http/chttp.h>
+#include <cybergarage/net/cinterface.h>
 
 ////////////////////////////////////////
 // setUp
@@ -21,9 +22,24 @@ void ClinkTestCase::tearDown()
 }
 
 ////////////////////////////////////////
-// testXXXXX
+// testNetworkInterface
 ////////////////////////////////////////
 
-void ClinkTestCase::testXXXXX()
+void ClinkTestCase::testNetworkInterface()
 {
+	CgByte nullMacAddr[CG_NET_MACADDR_SIZE];
+	CgByte macAddr[CG_NET_MACADDR_SIZE];
+	memset(nullMacAddr, 0, CG_NET_MACADDR_SIZE);
+
+	CgNetworkInterfaceList *netIfList = cg_net_interfacelist_new();
+	CPPUNIT_ASSERT(netIfList);
+	CPPUNIT_ASSERT(0 < cg_net_gethostinterfaces(netIfList));
+	for (CgNetworkInterface *netIf=cg_net_interfacelist_gets(netIfList); netIf; netIf=cg_net_interface_next(netIf)) {
+		CPPUNIT_ASSERT(0 < cg_strlen(cg_net_interface_getaddress(netIf)));
+		cg_net_interface_getmacaddress(netIf, macAddr);
+		CPPUNIT_ASSERT(memcmp(macAddr, nullMacAddr, CG_NET_MACADDR_SIZE) != 0);
+		//CPPUNIT_ASSERT(0 < cg_strlen(cg_net_interface_getname(netIf)));
+		//CPPUNIT_ASSERT(0 < cg_strlen(cg_net_interface_getnetmask(netIf)));
+	}
+	cg_net_interfacelist_delete(netIfList);
 }
