@@ -7,7 +7,7 @@ class ClinkTestCase : public CPPUNIT_NS::TestFixture
 {
   CPPUNIT_TEST_SUITE( ClinkTestCase );
 
-  CPPUNIT_TEST( testXXXXX );
+  CPPUNIT_TEST( testNetworkInterface );
 
   CPPUNIT_TEST_SUITE_END();
 
@@ -18,7 +18,7 @@ public:
 
 protected:
   
-	void testXXXXX();
+	void testNetworkInterface();
 };
 
 #endif
